Added a main page button to lasagna

--- a/foods/lasagna.html
+++ b/foods/lasagna.html
@@ -44,7 +44,7 @@
         <li>¾ cup grated Parmesan cheese</li>
     </ul>
 
-    <h2>Directions</h2>
+    <h2>Steos</h2>
     <ol>
         <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. 
             Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 
@@ -59,6 +59,7 @@
         <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.</li>
     </ol>
     
+    <a href = ../index.html>Go to Main Page</a>
 </body>
 
 </html>
