Typos in lasagna.html

--- a/foods/lasagna.html
+++ b/foods/lasagna.html
@@ -44,7 +44,7 @@
         <li>¾ cup grated Parmesan cheese</li>
     </ul>
 
-    <h2>Steos</h2>
+    <h2>Steps</h2>
     <ol>
         <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. 
             Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 
