Added and completed beef pho recipie

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <h1>Odin Recipies</h1>
    <ul>
      <li><a href="./foods/lasagna.html">Lasagna Recipe</a></li>
-     
+     <li><a href="./foods/beefPho.html">Beef Pho Reciple</a></li>
    </ul>
  </body>
 
