Added and completed chicken katsu recipie

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <ul>
      <li><a href="./foods/lasagna.html">Lasagna Recipe</a></li>
      <li><a href="./foods/beefPho.html">Beef Pho Reciple</a></li>
+     <li><a href="./foods/chickenKatsu.html">Chicken Katsu</a></li>
    </ul>
  </body>
 
