Added CSS to all files

--- a/foods/beefPho.html
+++ b/foods/beefPho.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>Beef Pho</title>
 </head>
 
 <body>
-    <h1>Beef Pho</h1>
-    <img src = "https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F01%2F21%2FBeef-Pho.jpg">
+    <h1 class="header">Beef Pho</h1>
+    <img class="pic" src = "https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F01%2F21%2FBeef-Pho.jpg" alt="Beef Pho">
 
-    <h2>Description</h2>
+    <h2 class="subheader">Description</h2>
       <p>This South Vietnamese style pho brings comfort with every sip and slurp. It's a restorative, richly seasoned broth ladled over rice noodles and thinly sliced 
         beef and served with a host of crisp, tangy, spicy, sweet, and fragrant garnishes.</p>
       <p>The version you see here has been adapted slightly from LETT101's original with insights from Allrecipes friend and Vietnamese cookbook author Andrea Nguyen 
@@ -37,7 +38,7 @@
         <li>½ pound frozen beef sirloin</li>
       </ul>
     
-    <h2>Steps</h2>
+    <h2 class="subheader">Steps</h2>
       <ol>
         <li>Place the beef bones in a 9-quart (or larger) pot. Season with salt, and fill pot with 2 gallons of water. Bring to a boil, reduce heat, and simmer for 
             about 2 hours.</li>
