--- a/foods/chickenKatsu.html
+++ b/foods/chickenKatsu.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset = "UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>Chicken Katsu</title>
 </head>
 
 <body>
-  <h1>Chicken Katsu</h1>
-  <img src = "https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F05%2F18%2Fimage-2000-1.jpg">
+  <h1 class="header">Chicken Katsu</h1>
+  <img class="pic" src = "https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F05%2F18%2Fimage-2000-1.jpg" alt="Chicken Katsu">
 
   <h2>Description</h2>
     <p>Chicken katsu (chicken cutlet (Japanese: チキンカツ, Hepburn: chikinkatsu)), also known as panko chicken, or tori katsu (torikatsu (鶏カツ)) is a Japanese dish 
