--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
  <head>
    <meta charset = "UTF-8">
+   <link rel="stylesheet" href = style.css>
    <title>Recipes</title>
  </head>
  
  <body>
-   <h1>Odin Recipies</h1>
+   <h1 class="header">Recipies</h1>
    <ul>
-     <li><a href="./foods/lasagna.html">Lasagna Recipe</a></li>
-     <li><a href="./foods/beefPho.html">Beef Pho Reciple</a></li>
-     <li><a href="./foods/chickenKatsu.html">Chicken Katsu</a></li>
+     <li><a class="link" href="./foods/lasagna.html">Lasagna Recipe</a></li>
+     <li><a class="link" href="./foods/beefPho.html">Beef Pho Reciple</a></li>
+     <li><a class="link" href="./foods/chickenKatsu.html">Chicken Katsu</a></li>
    </ul>
  </body>
 
