--- a/foods/lasagna.html
+++ b/foods/lasagna.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset = "UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>Lasagna</title>
 </head>
 
 <body>
-    <h1>Lasagna</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3359675.jpg&w=272&h=272&c=sc&poi=face&q=60" alt="Homemade Lasagna">
+    <h1 class="header">Lasagna</h1>
+    <img class="pic" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3359675.jpg&w=272&h=272&c=sc&poi=face&q=60" alt="Homemade Lasagna">
 
     <h2>Description</h2>
       <p>Lasagna is a wide, flat sheet of pasta. Lasagna can refer to either the type of noodle or to the typical lasagna dish which is a dish made with several 
